# nile-security-solana

./: .env.example  .env.mainnet.example  .gitignore  .pre-commit-config.yaml  Anchor.toml  CLAUDE.md  LICENSING.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0765810ab271_initial_schema_with_agent_ecosystem.py  be8251cf9f1a_add_soul_token_market_tables.py  c3a1f8b20d5e_migrate_evm_to_solana.py
backend/nile/: __init__.py  __main__.py  app.py  config.py
backend/nile/core/: alerting.py  auth.py  database.py  event_bus.py  exceptions.py  rate_limit.py
backend/nile/discord/: LICENSE  bot.py  screenshots.py
backend/nile/middleware/: logging.py  metrics.py
backend/nile/models/: __init__.py  agent.py  agent_contribution.py  agent_message.py  base.py  benchmark_run.py  contract.py  ecosystem_event.py  kpi_metric.py  nile_score.py  oracle_event.py  person.py  portfolio.py  price_candle.py  scan_job.py  soul_token.py  trade.py  valuation_snapshot.py  vulnerability.py
backend/nile/routers/v1/: LICENSE  __init__.py  agents.py  benchmarks.py  contracts.py  events.py  health.py  kpis.py  oracle.py  persons.py  scans.py  soul_tokens.py  tasks.py  trading.py
backend/nile/schemas/: benchmark.py  contract.py  kpi.py  person.py  scan.py  solana_scan.py  soul_token.py
backend/nile/scripts/: seed_persons.py
backend/nile/services/: LICENSE  agent_scorer.py  chain_service.py  collaboration.py  ecosystem_checker.py  feedback_loop.py  idl_fetcher.py  incentive_engine.py  nile_scorer.py  onchain_writer.py  oracle_consensus.py  pattern_library.py  program_analyzer.py  pumpfun_analyzer.py  risk_engine.py  soul_agent_incentives.py  soul_collaboration.py  soul_valuation.py
backend/nile/workers/: main.py  scan_worker.py
backend/tests/: conftest.py  test_agent_scorer.py  test_alerting.py  test_api_agents.py  test_api_agents_extended.py  test_api_auth.py  test_api_benchmarks.py  test_api_benchmarks_extended.py  test_api_contracts.py  test_api_events.py  test_api_health.py  test_api_health_ready.py  test_api_kpis.py  test_api_kpis_grades.py  test_api_oracle.py  test_api_oracle_submit.py  test_api_persons.py  test_api_persons_extended.py  test_api_scans.py  test_api_scans_extended.py  test_api_soul_tokens.py  test_api_tasks.py  test_api_trading.py  test_api_trading_extended.py  test_auth_extended.py  test_bug_fixes.py  test_chain_service.py  test_chain_service_bodies.py  test_chain_service_deep.py  test_chain_service_extended.py  test_chain_service_program_info.py  test_collaboration.py  test_config_security.py  test_config_warnings.py  test_coverage_final.py  test_db_smoke.py  test_discord_bot.py  test_discord_bot_async.py  test_discord_screenshots.py  test_ecosystem_checker.py  (+33 more)
deploy/: Dockerfile.backend  Dockerfile.discord  Dockerfile.frontend  LICENSE  docker-compose.monitoring.yml  nginx.conf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  (+1 more)
programs/nile_security/: Cargo.toml
programs/nile_security/src/: errors.rs  lib.rs  state.rs
programs/nile_security/src/instructions/: authorize_agent.rs  initialize.rs  mod.rs  register_program.rs  submit_report.rs  submit_score.rs  vote_report.rs
(+69 files in other folders)
