[project]
name = "nile-security"
version = "0.1.0"
description = "NILE Smart Contract Security Intelligence Platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "anthropic>=0.43.0",
    "openai>=1.60.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.18",
    "pyjwt>=2.9.0",
    "discord.py>=2.4.0",
    "playwright>=1.40.0",
    "web3>=7.0.0",
    "base58>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nile"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S"]
ignore = ["S101", "B008", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S108"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
