[package]
name = "nile-security"
version = "0.1.0"
description = "NILE Security — Smart contract security scoring for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nile_security"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
